--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "foundry-fund-me/lib/chainlink-brownie-contracts"]
 	path = foundry-fund-me/lib/chainlink-brownie-contracts
 	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
+[submodule "foundry-smart-contract-lottery/lib/forge-std"]
+	path = foundry-smart-contract-lottery/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
